--- a/.env.example
+++ b/.env.example
@@ -19,13 +19,18 @@ AGENT_SEED_PHRASE=
 # e.g. https://<your-subdomain>.ngrok-free.app/submit
 AGENT_A_PUBLIC_URL=
 
-# Solana Configuration (Stage 2)
+# Solana Configuration
 SOLANA_RPC_URL=https://api.devnet.solana.com
 SOLANA_WALLET_PATH=~/.config/solana/id.json
 ESCROW_PROGRAM_ID=HgzpCVSzmSwveikHVTpt85jVXpcqnJWQNcZzFbnjMEz9
+PROVIDER_PUBLIC_KEY=your_provider_wallet_pubkey_here
 
-# Sanctum Gateway Configuration (Stage 2)
+# SPL Token Configuration (for payments)
+TEST_MINT=your_spl_token_mint_address_here
+CLIENT_TOKEN_ACCOUNT=your_client_token_account_here
+PROVIDER_TOKEN_ACCOUNT=your_provider_token_account_here
+ESCROW_TOKEN_ACCOUNT=your_escrow_token_account_here
+
+# Sanctum Gateway Configuration
 GATEWAY_API_KEY=your_gateway_api_key_here
-
-# Arcium Configuration (Stage 3)
-# ARCIUM_API_KEY=
+GATEWAY_CLUSTER=devnet
