x402 integeration and full documentation

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,5 @@
 # AI Economy Protocol - Environment Variables
 
-# Agent Configuration
-AGENT_A_NAME=DataAnalystAgent
-AGENT_B_NAME=ClientAgent
-
-# Agentverse Configuration (to be added after registration)
-# AGENT_A_ADDRESS=
-# AGENT_B_ADDRESS=
-
-# Agentverse API (for Chat Protocol registration)
-# Copy your Agentverse key from the UI when prompted
-# DO NOT COMMIT your real values
-# Example usage: see utils/register_agent.py
-AGENTVERSE_KEY=
-AGENT_SEED_PHRASE=
-
-# Public HTTPS endpoint (ngrok) for Agent A when using Chat Protocol
-# e.g. https://<your-subdomain>.ngrok-free.app/submit
-AGENT_A_PUBLIC_URL=
-
 # Solana Configuration
 SOLANA_RPC_URL=https://api.devnet.solana.com
 SOLANA_WALLET_PATH=~/.config/solana/id.json
@@ -26,7 +7,7 @@ ESCROW_PROGRAM_ID=HgzpCVSzmSwveikHVTpt85jVXpcqnJWQNcZzFbnjMEz9
 PROVIDER_PUBLIC_KEY=your_provider_wallet_pubkey_here
 
 # SPL Token Configuration (for payments)
-TEST_MINT=your_spl_token_mint_address_here
+TEST_MINT=your_spl_token_mint_address_here  # Tokens = SPL with 6 decimals
 CLIENT_TOKEN_ACCOUNT=your_client_token_account_here
 PROVIDER_TOKEN_ACCOUNT=your_provider_token_account_here
 ESCROW_TOKEN_ACCOUNT=your_escrow_token_account_here
@@ -34,3 +15,6 @@ ESCROW_TOKEN_ACCOUNT=your_escrow_token_account_here
 # Sanctum Gateway Configuration
 GATEWAY_API_KEY=your_gateway_api_key_here
 GATEWAY_CLUSTER=devnet
+
+# AI Configuration (Gemini)
+GEMINI_API_KEY=your_gemini_api_key_here
